<resources>
    <string name="app_name">SchoolTools</string>
    <string name="channel_name">SchoolTools-Channel</string>
    <string name="channel_description">NotificationChannel für SchoolTools</string>
    <string name="item_deleted">1 Eintrag wurde entfernt!</string>
    <string name="item_undo">Rückgängig</string>
    <string name="main_nav_main">Startseite</string>
    <string name="main_nav_buttons">Knöpfe</string>
    <string name="main_nav_mark">Noten</string>
    <string name="main_nav_mark_list">Notenliste</string>
    <string name="main_nav_calculateMark">Noten berechnen</string>
    <string name="main_nav_plan">Planen</string>
    <string name="main_nav_timetable">Stundenplan</string>
    <string name="main_nav_notes">Notizen</string>
    <string name="main_nav_timer">Schultimer</string>
    <string name="main_nav_todo">ToDo</string>
    <string name="main_nav_learn">Lernen</string>
    <string name="main_nav_learningCards">Kartei-Karten</string>
    <string name="main_nav_bookmarks">Lesezeichen</string>
    <string name="main_nav_else">Sonstiges</string>
    <string name="main_speech">Sprachbefehl</string>
    <string name="main_menu_export">Export/Import</string>
    <string name="main_menu_settings">Einstellungen</string>
    <string name="main_menu_help">Hilfe</string>
    <string name="main_menu_close">Beenden</string>
    <string name="main_today">Heute</string>
    <string name="main_today_timetable">Aktuelle Fächer</string>
    <string name="main_top5Notes">Top 5 Notizen</string>
    <string name="main_importantToDos">5 Wichtigste ToDos</string>
    <string name="main_taggedBookMarks">Getagte Lesezeichen</string>
    <string name="main_quickQuery">Schnelle Abfrage</string>
    <string name="main_importantToDos_onlyNotSolved">nur nicht gelöste</string>
    <string name="main_savedTimeTables">Gespeicherte Stundenpläne</string>
    <string name="main_savedMarkList">Gespeicherte Notenliste</string>
    <string name="main_noEntry">Kein Eintrag</string>
    <string name="main_refreshSuccessFully">Erfolgreich aktualisiert!</string>
    <string name="main_speak_todo">Tutu</string>
    <string name="main_speak_note_success">Notiz erfolgreich gespeichert!</string>
    <string name="main_speak_todo_success">ToDo erfolgreich gespeichert!</string>
    <string name="marklist_state">Status</string>
    <string name="marklist_state_ok">Erfolgreich berechnet!</string>
    <string name="marklist_state_error">Daten sind Fehlerhaft!</string>
    <string name="marklist_maxPoints">Max. Punkte</string>
    <string name="marklist_mark">Note</string>
    <string name="marklist_mark_quarter">Viertel Noten</string>
    <string name="marklist_mark_tenth">Zehntel Noten</string>
    <string name="marklist_points">Punkte</string>
    <string name="marklist_failures">Fehler</string>
    <string name="marklist_points_half">Halbe Punkte</string>
    <string name="marklist_dictatMode">Diktat-Modus</string>
    <string-array name="marklist_search">
        <item>Pkt/F</item>
        <item>Note</item>
    </string-array>
    <string name="marklist_search_after">Suche nach</string>
    <string name="marklist_bestMarkAt">Beste Note ab</string>
    <string name="marklist_worstMarkTo">Schlechteste Note bis</string>
    <string-array name="marklist_type">
        <item>Lineare Notenliste</item>
        <item>Notenliste mit Knicks</item>
        <item>Exponentielle Notenliste</item>
        <item>IHK-Notenliste</item>
    </string-array>
    <string-array name="marklist_view">
        <item>beste Note zuerst</item>
        <item>schlechteste Note zuerst</item>
        <item>höchste Punktzahl zuerst</item>
        <item>niedrigste Punktzahl zuerst</item>
    </string-array>
    <string-array name="marklist_markMode">
        <item>normale Noten (1–6)</item>
        <item>Notenpunkte (0–15)</item>
        <item>normale Noten mit Zeichen</item>
    </string-array>
    <string name="marklist_settings_save_title">Einstellungen speichern als</string>
    <string name="marklist_settings_open_title">Einstellungen öffnen</string>
    <string name="marklist_extended_show_steps">Stufen anzeigen</string>
    <string name="marklist_extended_menu_snapshot">Als Bild speichern</string>
    <string name="marklist_extended_menu_share">Teilen</string>
    <string name="marklist_menu_saveDefault">Als Standard speichern</string>
    <string name="marklist_menu_resetToDefault">Auf Standard zurücksetzen</string>
    <string name="marklist_menu_saveMarkList">Notenliste speichern</string>
    <string name="marklist_menu_openMarkList">Notenliste öffnen</string>
    <string name="marklist_menu_extended">Erweiterte Ansicht</string>
    <string name="mark_weight">Gewichtung</string>
    <string name="mark_mark">Note</string>
    <string name="mark_average">Durchschnitt</string>
    <string name="mark_themes">Themen</string>
    <string name="mark_timerEvent">Klausur in Timer eintragen</string>
    <string name="mark_todo">ToDo-Liste aus Themen erstellen</string>
    <string name="mark_date">Datum</string>
    <string name="mark_year">Jahr</string>
    <string name="mark_test">Arbeit</string>
    <string name="settings_general">Allgemein</string>
    <string name="settings_general_summary">Einstellungen für Notifikationen, Erinnerungen, Datenbank und Design</string>
    <string name="settings_general_notifications_title">Notifikationen anzeigen</string>
    <string name="settings_general_notifications_summary">Notifikationen von aktuellen Erinnerungen anzeigen!</string>
    <string name="settings_general_assistant">Assistent benutzen</string>
    <string name="settings_general_assistant_summary">Wenn Assistent vorhanden, dann diesen benutzen, um ein neues Element hinzuzufügen!</string>
    <string name="settings_general_background">Hintergründe</string>
    <string name="settings_general_custom_background_title">Eigenes Hintergrundbild</string>
    <string name="settings_general_custom_background_summary">App-Hintergrundbild durch eigenes Bild ersetzen!</string>
    <string name="settings_general_custom_app_bar_title">Eigenes Hintergrundbild der App-Bar</string>
    <string name="settings_general_custom_app_bar_summary">App-Bar-Hintergrundbild durch eigenes Bild ersetzen!</string>
    <string name="settings_general_custom_background_select">Bilder auswählen</string>
    <string name="settings_general_whatsNew">Neuigkeiten</string>
    <string name="settings_general_whatsNew_title">Neuigkeiten erneut anzeigen</string>
    <string name="settings_general_whatsNew_summary">Den Neuigkeiten Bildschirm erneut anzeigen</string>
    <string name="settings_general_database">Datenbank</string>
    <string name="settings_general_deleteMemories_title">Erinnerungen löschen</string>
    <string name="settings_general_deleteMemories_summary">Erinnerungen löschen, nachdem sie abgelaufen sind</string>
    <string name="settings_general_reset_database_title">Datenbank zurücksetzen</string>
    <string name="settings_general_reset_database_summary">Datenbank auf Auslieferungszustand zurücksetzen!</string>
    <string name="settings_start">Startbildschirm</string>
    <string name="settings_start_summary">Einstellungen für Start-Modul, Auswahl der Widgets auf dem Start-Bildschirm, Aktivieren und Deaktivieren von Modulen</string>
    <string name="settings_start_start_header">Widgets für Startseite auswählen</string>
    <string name="settings_start_start_summary">Wählen Sie die Widgets aus, welche auf der Startseite angezeigt
        werden.
    </string>
    <string-array name="settings_start_start_entries">
        <item>@string/main_today</item>
        <item>@string/main_today_timetable</item>
        <item>@string/main_top5Notes</item>
        <item>@string/main_importantToDos</item>
        <item>@string/main_savedTimeTables</item>
        <item>@string/main_savedMarkList</item>
        <item>@string/main_taggedBookMarks</item>
        <item>@string/main_quickQuery</item>
        <item>@string/main_nav_buttons</item>
    </string-array>
    <string-array name="settings_start_start_default">
        <item>@string/main_today</item>
        <item>@string/main_top5Notes</item>
        <item>@string/main_importantToDos</item>
        <item>@string/main_savedMarkList</item>
    </string-array>
    <string name="settings_start_shown_modules_header">Module anzeigen</string>
    <string name="settings_start_shown_modules_summary">Bitte wählen Sie die anzuzeigenden Module aus!</string>
    <string-array name="settings_start_shown_modules_entries">
        <item>@string/main_nav_mark_list</item>
        <item>@string/main_nav_mark</item>
        <item>@string/main_nav_timetable</item>
        <item>@string/main_nav_todo</item>
        <item>@string/main_nav_notes</item>
        <item>@string/main_nav_timer</item>
        <item>@string/main_nav_learningCards</item>
        <item>@string/main_nav_bookmarks</item>
    </string-array>
    <string name="settings_start_start_module_header">Start-Modul wählen</string>
    <string name="settings_start_start_module_summary">Bitte wählen Sie das Start-Modul aus!</string>
    <string-array name="settings_start_start_module_entries">
        <item>@string/main_nav_main</item>
        <item>@string/main_nav_mark_list</item>
        <item>@string/main_nav_mark</item>
        <item>@string/main_nav_timetable</item>
        <item>@string/main_nav_todo</item>
        <item>@string/main_nav_notes</item>
        <item>@string/main_nav_timer</item>
        <item>@string/main_nav_learningCards</item>
        <item>@string/main_nav_bookmarks</item>
    </string-array>
    <string name="settings_school">Thematische Einstellungen</string>
    <string name="settings_school_summary">Diverse Einstellungen zu den einzelnen Modulen!</string>
    <string name="settings_school_expert_header">Experten-Modus (Notenliste)</string>
    <string name="settings_school_expert_summary">Der Experten-Modus enthält erweiterte Funktionen!</string>
    <string name="settings_school_extended_max_header">Maximale Punktzahl (Notenliste)</string>
    <string name="settings_api_override_header">Einträge überschreiben</string>
    <string name="settings_api_override_summary_on">Bereits vorhandene Einträge überschreiben</string>
    <string name="settings_api_override_summary_of">Bereits vorhandene Einträge nicht überschreiben, sondern neuen
        Eintrag erstellen
    </string>
    <string name="settings_api_cancel_export_header">Export abbrechen</string>
    <string name="settings_api_cancel_export_summary_on">Export abbrechen, sobald eine Zeile fehlerhaft!</string>
    <string name="settings_api_cancel_export_summary_of">Export erst abbrechen, sobald komplette Datei fehlerhaft!</string>
    <string name="timetable_teacher">Lehrer</string>
    <string name="timetable_lesson">Fach</string>
    <string name="timetable_times">Zeiten</string>
    <string name="timetable_class">Klasse</string>
    <string name="todo_list">ToDo-Liste</string>
    <string name="todo_category">Kategorie</string>
    <string name="todo_solved">Erledigt</string>
    <string name="todo_priority">Priorität</string>
    <string name="learningCard_question">Frage</string>
    <string name="learningCard_answer">Antwort</string>
    <string name="learningCard_note1">Hinweis 1</string>
    <string name="learningCard_note2">Hinweis 2</string>
    <string name="learningCard_query_tries">Versuche</string>
    <string name="learningCard_query_check">Antwort korrigieren</string>
    <string name="sys_new">Neu</string>
    <string name="sys_edit">Bearbeiten</string>
    <string name="sys_delete">Löschen</string>
    <string name="sys_save">Speichern</string>
    <string name="sys_cancel">Abbrechen</string>
    <string name="sys_description">Beschreibung</string>
    <string name="sys_title">Titel</string>
    <string name="sys_memory">Erinnerung</string>
</resources>