<!--
  ~ Copyright (C) 2017-2019  Dominic Joas
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="swtNotifications"
        android:defaultValue="true"
        android:title="@string/settings_general_notifications_title"
        android:summary="@string/settings_general_notifications_summary"/>

    <PreferenceCategory
        android:title="@string/settings_general_background"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:layout="@android:layout/preference_category">
        <SwitchPreference
            android:key="swtCustomBackground"
            android:defaultValue="false"
            android:title="@string/settings_general_custom_background_title"
            android:summary="@string/settings_general_custom_background_summary"/>
        <SwitchPreference
            android:key="swtCustomAppBarBackground"
            android:defaultValue="false"
            android:title="@string/settings_general_custom_app_bar_title"
            android:summary="@string/settings_general_custom_app_bar_summary"/>
    </PreferenceCategory>

    <SwitchPreference
        android:key="swtWhatsNew"
        android:defaultValue="false"
        android:title="@string/settings_general_whatsNew_title"
        android:summary="@string/settings_general_whatsNew_summary"/>

    <SwitchPreference
        android:key="swtDeleteMemories"
        android:defaultValue="true"
        android:title="@string/settings_general_deleteMemories_title"
        android:summary="@string/settings_general_deleteMemories_summary"/>


    <SwitchPreference
        android:key="swtResetDatabase"
        android:defaultValue="true"
        android:title="@string/settings_general_reset_database_title"
        android:summary="@string/settings_general_deleteMemories_summary"/>
</PreferenceScreen>
