<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017-2019  Dominic Joas
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="swtApiOverrideEntries"
        android:title="@string/settings_api_override_header"
        android:summaryOff="@string/settings_api_override_summary_of"
        android:summaryOn="@string/settings_api_override_summary_on"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="swtApiCancelExport"
        android:title="@string/settings_api_cancel_export_header"
        android:summaryOff="@string/settings_api_cancel_export_summary_of"
        android:summaryOn="@string/settings_api_cancel_export_summary_on"/>
</PreferenceScreen>