<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tbl_border"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/txtLearningCardAnswer">
        <TextView
            android:id="@+id/lblLearningCardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sys_title"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/lblLearningCardQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learningCard_question"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/lblLearningCardNote1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learningCard_note1"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/lblLearningCardNote2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learningCard_note2"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">
            <TextView
                android:text="@string/learningCard_query_tries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/lblLearningCardCurrentTry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/lblLearningCardMaxTries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/txtLearningCardAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/learningCard_answer"
        android:textStyle="bold"
        android:textSize="16sp"
        android:inputType="textMultiLine"
        android:layout_above="@+id/cmdCheckAnswer"/>
    <Button
        android:id="@+id/cmdCheckAnswer"
        android:text="@string/learningCard_query_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>