<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017-2019  Dominic Joas
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="de.domjos.schooltools.activities.ToDoEntryActivity"
    android:background="@drawable/tbl_border">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TableLayout
            android:id="@+id/content"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="10">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="10">
                <TextView
                    android:id="@+id/lblToDoList"
                    android:text="@string/todo_list"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingRight="6dp"
                    android:paddingLeft="6dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:paddingTop="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:padding="6dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/txtToDoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:hint="@string/sys_title"/>

            <EditText
                android:id="@+id/txtToDoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:hint="@string/sys_description"
                android:inputType="textMultiLine"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="10"
                android:weightSum="10"
                android:background="@drawable/tbl_border">
                <TextView
                    android:text="@string/todo_priority"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:paddingRight="6dp"
                    android:paddingLeft="6dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:paddingTop="4dp"
                    android:textSize="14sp"/>
                <RatingBar
                    android:id="@+id/rbToDoImportance"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:numStars="5"
                    android:layout_gravity="center|center"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/chkToDoSolved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/todo_solved"/>

            <EditText
                android:id="@+id/txtToDoDCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:hint="@string/todo_category"
                android:inputType="text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <CheckBox
                    android:id="@+id/chkToDoMemory"
                    android:text="@string/sys_memory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"/>
                <EditText
                    android:id="@+id/txtToDoMemoryDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:hint="@string/mark_date"
                    android:inputType="date"/>
            </LinearLayout>
        </TableLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation_sys" />

</LinearLayout>
